	  - Dropped support for IE 7 & IE 8
	MR-850: Replaced XULRunner with GeckoFx
	  - No need to manually configure to have the Gecko rendering engine available now
	  - Install image is now significantly larger due to the inclusion of the Gecko Engine
	MR-821: Initial Japanese translation included
	Port Scan is now Asynchronous (and is significantly faster)
	
	
	Fixes:
	------
	MR-854: crashes when right clicking on connection tab
	MR-852: Option "Allow only a single instance of the application" non-functional
	MR-836: Trying to delete a folder of connections only deletes 2 connections at a time
	MR-824, MR-706: Suppress Script Errors when using the IE rendering engine
	MR-822: Improve RDP error code messages
	MR-640: Fixed Inheritance not working
	MR-639: RDP: Connect to console session
	MR-610, MR-582, MR-451: RDP: Protocol Error 3334 or exceptions with large number of connections open
	  - This problem appears largely resolved by most reports and testing
	  - Further workarounds/problem avoidance: Disable Bitmap Caching on all RDP session configuration
	MR-429: Display issue on the Options -> Advanced panel
	MR-385: Inheritance settings lost when moving item to the root of the tree
	
	
	
1.73 Beta 2 (NEVER RELEASED):
  Fixed issue MR-619 - Keyboard shortcuts stop working after locking the screen with Win+L
  Added support for importing files from PuTTY Connection Manager.
  Improved the import and export functionality.



1.73 Beta 1 (2013-11-19):
  Added feature MR-16 - Add keyboard shortcuts to switch between tabs
  Added feature MR-141 - Add a default protocol option
  Added feature MR-212 - Add option to connect without credentials
  Added feature MR-512 - Add support for importing files from Remote Desktop Connection Manager
  Added feature MR-547 - Add support for Xming Portable PuTTY
  Made improvement MR-250 - Show the name of the selected connection tab in the title of the window